fix font size issues on ios safari

--- a/src/stylesheets/App.module.scss
+++ b/src/stylesheets/App.module.scss
@@ -31,7 +31,7 @@ a {
 }
 
 .content {
-  font-size: 0.8em;
+  font-size: 11.5px;
   margin-bottom: 35px;
   padding-top: 20px;
   width: 100%;
